complete test module jar