@@ -12,9 +12,9 @@ dependencies {
     compile "commons-logging:commons-logging:${project.property('commonslogging.version')}"
 
     testCompile project(':resttest')
-    testCompile "org.xbib.elasticsearch:randomizedtesting:${project.property('xbib-elasticsearch-test.version')}"
-    testCompile "org.xbib.elasticsearch:securemock:${project.property('securemock.version')}"
-    testCompile "org.elasticsearch:mocksocket:${project.property('mocksocket.version')}"
+    testCompile "org.xbib.elasticsearch:randomizedtesting:${project.property('elasticsearch-libs.version')}"
+    testCompile "org.xbib.elasticsearch:securemock:${project.property('elasticsearch-libs.version')}"
+    testCompile "org.xbib.elasticsearch:mocksocket:${project.property('elasticsearch-libs.version')}"
     testCompile "org.hamcrest:hamcrest-all:${project.property('hamcrest.version')}"
 }
 
@@ -22,7 +22,18 @@ afterEvaluate {
     compileJava {
         inputs.property("moduleName", 'org.xbib.elasticsearch.client.rest')
         doFirst {
-            options.compilerArgs = ['--module-path', classpath.asPath]
+            options.compilerArgs = [
+                    '--module-path', classpath.asPath
+            ]
+            classpath = files()
+        }
+    }
+    compileTestJava {
+        inputs.property("moduleName", 'org.xbib.elasticsearch.client.rest.test')
+        doFirst {
+            options.compilerArgs = [
+                    '--module-path', classpath.asPath
+            ]
             classpath = files()
         }
     }
@@ -59,27 +70,9 @@ jarHell.enabled = false
 
 namingConventions.enabled = false
 
-configurations {
-    main
-}
-
-artifacts {
-    main jar
-}
-
 test.enabled = false
 randomizedTest.enabled = false
-esTest {
-    enabled = true
-    classpath = files(configurations.testRuntime) +
-            configurations.main.artifacts.files + configurations.tests.artifacts.files
-    jvmArg '--add-modules=jdk.httpserver'
-    jvmArg '--add-modules=org.xbib.elasticsearch.client.rest'
-    jvmArg '--add-modules=org.xbib.elasticsearch.client.resttest'
-    jvmArg '--add-modules=org.xbib.elasticsearch.securemock'
-    jvmArg '--add-reads=org.xbib.elasticsearch.securemock=org.xbib.elasticsearch.client.rest'
-
-}
+esTest.enabled = true
 
 clean {
     delete fileTree('.') { include '.local*.log' }
